update add folders fixed bugs update Demo

--- a/Example/SNMediator/testModule/SNTestViewController2.xib
+++ b/Example/SNMediator/testModule/SNTestViewController2.xib
@@ -38,12 +38,24 @@
                         <action selector="buttonClicked:" destination="-1" eventType="touchUpInside" id="xgf-bf-ISv"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wti-CU-4gx">
+                    <rect key="frame" x="107" y="330" width="160" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="160" id="YH5-zp-nWs"/>
+                    </constraints>
+                    <state key="normal" title="push nonexistent page"/>
+                    <connections>
+                        <action selector="pushNonexistentVC:" destination="-1" eventType="touchUpInside" id="Tli-RU-hVl"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="wti-CU-4gx" firstAttribute="top" secondItem="TYy-aW-VhZ" secondAttribute="bottom" constant="50" id="0Nw-U4-u3g"/>
                 <constraint firstItem="TYy-aW-VhZ" firstAttribute="centerX" secondItem="AUc-cs-pzl" secondAttribute="centerX" id="5cu-cv-G4n"/>
                 <constraint firstItem="AUc-cs-pzl" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Bmb-Zt-QPC"/>
                 <constraint firstItem="AUc-cs-pzl" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="PNq-8P-ANd"/>
+                <constraint firstItem="wti-CU-4gx" firstAttribute="centerX" secondItem="TYy-aW-VhZ" secondAttribute="centerX" id="Yyl-Hr-zVC"/>
                 <constraint firstAttribute="trailing" secondItem="AUc-cs-pzl" secondAttribute="trailing" id="nad-dk-mL7"/>
                 <constraint firstItem="TYy-aW-VhZ" firstAttribute="height" secondItem="AUc-cs-pzl" secondAttribute="height" id="ndC-py-5mu"/>
                 <constraint firstItem="TYy-aW-VhZ" firstAttribute="top" secondItem="AUc-cs-pzl" secondAttribute="bottom" constant="100" id="s46-hU-dmS"/>
