fixed bugs  add Demo

--- a/Example/SNMediator/testModule/SNTestViewController2.xib
+++ b/Example/SNMediator/testModule/SNTestViewController2.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13528" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13526"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -48,12 +48,25 @@
                         <action selector="pushNonexistentVC:" destination="-1" eventType="touchUpInside" id="Tli-RU-hVl"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gRi-gm-voZ">
+                    <rect key="frame" x="145" y="410" width="85" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="85" id="UNV-hI-uR7"/>
+                        <constraint firstAttribute="height" constant="40" id="t6W-FY-r4k"/>
+                    </constraints>
+                    <state key="normal" title="push to VC4"/>
+                    <connections>
+                        <action selector="pushToVC4:" destination="-1" eventType="touchUpInside" id="4rN-ua-LW0"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="wti-CU-4gx" firstAttribute="top" secondItem="TYy-aW-VhZ" secondAttribute="bottom" constant="50" id="0Nw-U4-u3g"/>
+                <constraint firstItem="gRi-gm-voZ" firstAttribute="top" secondItem="wti-CU-4gx" secondAttribute="bottom" constant="50" id="1wh-mk-M28"/>
                 <constraint firstItem="TYy-aW-VhZ" firstAttribute="centerX" secondItem="AUc-cs-pzl" secondAttribute="centerX" id="5cu-cv-G4n"/>
                 <constraint firstItem="AUc-cs-pzl" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Bmb-Zt-QPC"/>
+                <constraint firstItem="gRi-gm-voZ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="GFn-do-l2b"/>
                 <constraint firstItem="AUc-cs-pzl" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="PNq-8P-ANd"/>
                 <constraint firstItem="wti-CU-4gx" firstAttribute="centerX" secondItem="TYy-aW-VhZ" secondAttribute="centerX" id="Yyl-Hr-zVC"/>
                 <constraint firstAttribute="trailing" secondItem="AUc-cs-pzl" secondAttribute="trailing" id="nad-dk-mL7"/>
