--- a/Example/SNMediator/Base.lproj/Main.storyboard
+++ b/Example/SNMediator/Base.lproj/Main.storyboard
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13528" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="mXu-o5-FhS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UJH-e9-7zH">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13526"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="wQg-tq-qST">
             <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="whP-gf-Uak" customClass="SNViewController" sceneMemberID="viewController">
+                <viewController id="whP-gf-Uak" customClass="SNViewController0" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="uEw-UM-LJ8"/>
                         <viewControllerLayoutGuide type="bottom" id="Mvr-aV-6Um"/>
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I7a-2Q-JOs">
-                                <rect key="frame" x="80" y="100" width="215" height="50"/>
+                                <rect key="frame" x="147.5" y="100" width="80" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="QVa-jD-8xP"/>
                                 </constraints>
@@ -32,7 +32,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XK4-7m-ueE">
-                                <rect key="frame" x="80" y="190" width="215" height="50"/>
+                                <rect key="frame" x="147.5" y="190" width="80" height="50"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Test Service">
                                     <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -49,37 +49,146 @@
                             <constraint firstItem="XK4-7m-ueE" firstAttribute="width" secondItem="I7a-2Q-JOs" secondAttribute="width" id="Mbs-xb-I8r"/>
                             <constraint firstItem="I7a-2Q-JOs" firstAttribute="centerX" secondItem="TpU-gO-2f1" secondAttribute="centerX" id="Q5f-VK-e5n"/>
                             <constraint firstItem="XK4-7m-ueE" firstAttribute="top" secondItem="I7a-2Q-JOs" secondAttribute="bottom" constant="40" id="UPD-rL-md8"/>
-                            <constraint firstAttribute="trailing" secondItem="I7a-2Q-JOs" secondAttribute="trailing" constant="80" id="btc-tl-L5r"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="I7a-2Q-JOs" secondAttribute="trailing" id="btc-tl-L5r"/>
                             <constraint firstItem="I7a-2Q-JOs" firstAttribute="top" secondItem="uEw-UM-LJ8" secondAttribute="bottom" constant="100" id="m8f-iJ-d9X"/>
-                            <constraint firstItem="I7a-2Q-JOs" firstAttribute="leading" secondItem="TpU-gO-2f1" secondAttribute="leading" constant="80" id="xSt-Ye-s26"/>
+                            <constraint firstItem="I7a-2Q-JOs" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="TpU-gO-2f1" secondAttribute="leading" id="xSt-Ye-s26"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="JH7-4I-pfz"/>
                     <navigationItem key="navigationItem" id="WeE-z6-Ro0"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tc2-Qw-aMS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="954" y="479"/>
+            <point key="canvasLocation" x="-972" y="700"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Diz-Am-MQD">
+        <!--Item-->
+        <scene sceneID="7Hf-v8-ZIJ">
             <objects>
-                <navigationController id="mXu-o5-FhS" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="Rul-cq-qgb">
+                <navigationController id="1b5-1h-mOo" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="08Q-pD-jPe"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="YeE-gf-PWJ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.68355038580000005" green="0.82262869319999998" blue="0.81009516739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <textAttributes key="titleTextAttributes">
-                            <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <color key="textShadowColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </textAttributes>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="0.26916921405311989" green="0.63136912760812169" blue="0.49473176967915078" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="whP-gf-Uak" kind="relationship" relationship="rootViewController" id="5i6-a5-npS"/>
+                        <segue destination="whP-gf-Uak" kind="relationship" relationship="rootViewController" id="Pey-ve-Ukz"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="v7l-G4-BbL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0VV-q9-C85" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="236" y="484"/>
+            <point key="canvasLocation" x="-1831" y="769"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="H6e-KQ-6nI">
+            <objects>
+                <viewController id="7Sn-h7-bTR" customClass="SNViewController2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tMs-YH-rwz"/>
+                        <viewControllerLayoutGuide type="bottom" id="Oij-j3-Jre"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hdU-uP-4hX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="Pk6-uP-6ZX"/>
+                    <navigationItem key="navigationItem" id="ocb-1k-hcK"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ioc-g4-GVL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1634" y="2614"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="lRf-24-O3t">
+            <objects>
+                <viewController id="bSO-Q6-431" customClass="SNViewController1" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sT5-T7-arI"/>
+                        <viewControllerLayoutGuide type="bottom" id="pNa-g4-xzX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PQa-G4-c3V">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pg9-jU-MWM">
+                                <rect key="frame" x="164.5" y="252" width="46" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="YuE-tI-5FJ"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="pg9-jU-MWM" firstAttribute="centerX" secondItem="PQa-G4-c3V" secondAttribute="centerX" id="BNw-Al-tk8"/>
+                            <constraint firstItem="pg9-jU-MWM" firstAttribute="centerY" secondItem="PQa-G4-c3V" secondAttribute="centerY" id="p1c-oI-L6V"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="dow-6i-HDs"/>
+                    <navigationItem key="navigationItem" id="Q6Y-lL-Cdh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DeG-3S-jxS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-284" y="1721.2893553223389"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="J9a-Bd-WQW">
+            <objects>
+                <tabBarController id="UJH-e9-7zH" customClass="SNTabBarController" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="n5W-9L-469">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="0.68355038580000005" green="0.82262869319999998" blue="0.81009516739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="1b5-1h-mOo" kind="relationship" relationship="viewControllers" id="p8Y-ud-tzR"/>
+                        <segue destination="dv2-MS-aFE" kind="relationship" relationship="viewControllers" id="RfI-Me-pum"/>
+                        <segue destination="bfq-GS-pdz" kind="relationship" relationship="viewControllers" id="Jcx-Aa-Gks"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8tk-P6-rrt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2650" y="1148"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="JRv-ar-2eC">
+            <objects>
+                <navigationController id="dv2-MS-aFE" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="ICD-y6-tSL"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="ExI-dw-HaK">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.77603917836954306" green="0.64069170263662401" blue="0.16528471795203259" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="bSO-Q6-431" kind="relationship" relationship="rootViewController" id="Yc4-Sx-0Wj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yDZ-Qi-yQa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1057" y="1409"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="KQf-Js-jQF">
+            <objects>
+                <navigationController id="bfq-GS-pdz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="kPn-9U-SvN"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="mJW-6o-HfR">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.85663864213197971" green="0.25080988189144665" blue="0.5543967756323871" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="7Sn-h7-bTR" kind="relationship" relationship="rootViewController" id="QZw-Ym-Hum"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KYo-Wq-6Fc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2106" y="1876"/>
         </scene>
     </scenes>
 </document>
